Mon Feb  2 16:17:46 2004  Tim Janik  <timj@gtk.org>

	* configure.in: version update to 0.5.7rc1, binary 0, interface 0.

Mon Feb  2 02:06:49 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstrecords.idl: fixed typo.

	* biogreen.skin:
	* images/biogreen.jpg: added skin.

Mon Feb  2 00:30:19 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkimagecache.c: set cache size to 0, this frees
	pixmaps as soon as they are unused.

	* beast-gtk/gxk/gxkscrollcanvas.c: fixed list removal bug that
	caused crashes on skin updates.

	* library/skins/blueimpress.skin:
	* library/skins/brownforms.skin:
	* library/skins/silvervein.skin:
	* library/skins/images/blueimpress.jpg:
	* library/skins/images/brownforms.jpg:
	* library/skins/images/silvervein.png: added new skins.

Sun Feb  1 18:38:15 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.[hc]: provide action list for available skins.

	* beast-gtk/dialogs/gadgets-beast.xml: put skin actions
	under View/Skins.

	* beast-gtk/bstrecords.idl: added some tooltips, support skin name.

	* beast-gtk/bstmain.c: added --skinrc=... option to set skinrc file
	name. added "demo" and "skins" directory print-out.

	* beast-gtk/bstskinconfig.[hc]: support setting skin file names
	via command line options, got rid of BEAST_SKINRC env hack.

	* configure.in: added skins/ and skins/images/ directories,
	define isntallation path for skins.

	* beast-gtk/bstutils.[hc]: renamed and rewrote bst_file_scan_song_name()
	into bst_file_scan_find_key() to be used with files other than songs.

	* data/Makefile.am: generate BST_PATH_SKINS config setting.

	* library/skins/: new directory for skins shipped with beast.
	* library/skins/images: new directory holding images needed by skins.

	* library/skins/white.skin: plain white skin, coming close to the
	pianor roll look from 0.5.6.

	* library/skins/images/moonpaper.png:
	* library/skins/moonpaper.skin: added Moon Paper skin.

Sun Feb  1 16:46:45 2004  Robert Sedak  <robert.sedak@sk.htnet.hr>
